testsuite/tests/properties/invalid_matchers/missing_nullnode.lkt
import common

class ExampleNode: FooNode {
    @parse_field body: BodyNode

    fun prop(): Int = match node.body {
        case e: Expression => e.prop()
    }
}
